<resources>
    <string name="app_name">CCI Animal Dispersal</string>
    <string name="debug_app_name">CCI Debug</string>
    <string name="text"> </string>
    <string name="search_hint">Search</string>
    <!--NFC Messages-->
    <string name="cannotWriteTechMessage">Cannot write tech or unformatted tag.</string>
    <string name="ndefWriteFailed">Write tag failed: %s. Please try again.</string>
    <string name="nfcAvailableDisabled">Turn On NFC</string>
    <string name="nfcOff">NFC Off</string>
    <string name="nfcAvailableEnabled">Ready to Scan</string>
    <string name="nfcOn">NFC On</string>
    <string name="nfcNotAvailable">NFC Not Available</string>
    <string name="noNfcMessage">NFC is not supported on this device.</string>
    <string name="nfcFailAnimalIDCheck">Write tag failed: Animal ID is not the same as previously scanned.</string>
    <string name="nfcSettingDisabled">NFC disabled in settings.</string>
    <string name="nfcSettingEnabled">NFC enabled in settings.</string>
    <string name="readEmptyMessage">There were no NDEF messages in the tag.</string>
    <string name="readMultipleRecordNDEFMessage">There are multiple than NDEF messages.</string>
    <string name="readNonNDEFMessage">Invalid NDEF message.</string>
    <string name="readSingleRecordNDEFMessage">There is one NDEF message.</string>
    <string name="tagLost">Tag lost</string>
    <string name="tagNotWritable">Tag is not writable.</string>
    <string name="tagTooSmallMessage">Message size %1$d bytes exceeds tag capacity of %2$d bytes.</string>
    <!--UI Strings-->
    <string name="add_event">ADD EVENT</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_3">Address Line 3</string>
    <string name="animal_details_i_heading">ANIMAL DETAILS I</string>
    <string name="animal_details_ii_heading">ANIMAL DETAILS II</string>
    <string name="animal_id">Animal ID</string>
    <string name="animal_id_mandatory">Animal ID *</string>
    <string name="animal_type">Animal Type</string>
    <string name="animal_type_mandatory">Animal Type *</string>
    <string name="cancel">Cancel</string>
    <string name="caretaker">Caretaker</string>
    <string name="caretaker_heading">CARETAKER</string>
    <string name="country">Country</string>
    <string name="country_mandatory">Country *</string>
    <string name="cow">Cow</string>
    <string name="date_dispersed">Date Dispersed</string>
    <string name="date_distributed">Date Distributed</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_purchased">Date Purchased</string>
    <string name="date_sold">Date Sold</string>
    <string name="dispersal_ic">Dispersal IC</string>
    <string name="dispersal_ic_mandatory">Dispersal IC *</string>
    <string name="done">Done</string>
    <string name="edit">EDIT</string>
    <string name="event_details">EVENT DETAILS</string>
    <string name="event_remarks">Event Remarks</string>
    <string name="event_type">Event Type</string>
    <string name="events_heading">EVENTS</string>
    <string name="female">Female</string>
    <string name="gender_mandatory">Gender *</string>
    <string name="goat">Goat</string>
    <string name="home">Home</string>
    <string name="internet_connection_heading">INTERNET CONNECTION</string>
    <string name="male">Male</string>
    <string name="name">Name</string>
    <string name="national_id_number">National ID Number</string>
    <string name="nfc">NFC</string>
    <string name="no_events_here">No events here!</string>
    <string name="no_records_found">No records found.</string>
    <string name="password">Password</string>
    <string name="pig">Pig</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="refresh">Refresh</string>
    <string name="register">Register</string>
    <string name="role">Role</string>
    <string name="sale_price">Sale Price</string>
    <string name="save">SAVE</string>
    <string name="sync_records">Sync Records</string>
    <string name="telephone">Telephone</string>
    <string name="user_name">User Name</string>
    <string name="welcome">WELCOME!</string>
    <!--Message (Toast)-->
    <string name="fill_in_mandatory_fields">Please fill in the mandatory fields</string>
    <string name="fill_in_caretaker_id">Please fill in the Caretaker Id</string>
    <string name="internet_connection_lost">Internet Connection has been lost. Please re-establish internet connection before sync.</string>
    <string name="nfc_tag_no_animal_id">NFC tag scanned has no valid Animal ID.</string>
    <string name="nfc_tag_no_country">NFC tag scanned has no valid country.</string>
    <string name="nfc_tag_no_access">You do not have access to this tag.</string>
    <string name="nfc_tag_no_supervisor">NFC tag scanned has no valid dispersal IC.</string>
    <string name="nfc_tag_not_synced">Tag data not synced.</string>
    <string name="fill_user_country_role">User Name, Country and Role must be filled.</string>
    <string name="fill_key_for_manager">You must enter a key for country manager or international manager.</string>
    <string name="incorrect_key">The key entered for this user role is incorrect.</string>
    <string name="sync_success">Sync Completed Successfully</string>
    <string name="leave_despite_not_save">You have not saved this animal record. Do you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="back">Back</string>
    <string name="device_data_sync_message">Device Data Upload in progress.....</string>
    <string name="server_download_sync_message">Server Data Download in progress.....</string>
    <string name="heading_new_animal_registration">NEW ANIMAL REGISTRATION</string>
    <string name="heading_animal_record">ANIMAL RECORD</string>
    <string name="error">Error</string>
    <string name="error_duplicate_animal_id">Duplicate Animal ID found.</string>
    <string name="ok">OK</string>
    <string name="heading_event_details">Event Details</string>
    <string name="heading_new_event_record">New Event Record</string>
    <string name="heading_no_internet">No Internet Connection</string>
    <string name="alert_record_saved">Animal Record has been saved.</string>
    <string name="alert_rescan_tag">Rescan Tag To Confirm Animal Registration</string>
    <string name="alert_internet_connection_for_registration">You need to be connected to the internet to register the user.</string>
    <string name="alert_user_registered">New user has been successfully registered.</string>
    <string name="btn_register_animal">REGISTER NEW ANIMAL</string>
    <string name="update_record_not_synced">Info: This record has not been synced. You may update open fields.</string>
    <string name="update_record_synced">Info: This record has been synced. You may only update the fields in blue.</string>
    <string name="view_record_not_synced">Info: This record has not been synced.</string>
    <string name="info_record_synced">Info: This record has been synced.</string>
    <string name="info_record_fully_filled">Info: This record has been synced. It is a fully filled record so it cannot be edited.</string>
    <string name="internet_on">Internet On – Ready to Sync</string>
    <string name="internet_off">Internet Off – Not Ready to Sync</string>
    <string name="num_records_not_synced">%1$d record(s) have not been synced</string>
    <string name="all_records_synced">All records are synced</string>
    <string name="add_an_event">Add An Event</string>
    <string name="search_results">Search Results</string>
    <string name="add_an_animal">Add An Animal</string>
    <string name="settings">Settings</string>
    <string name="sync_upload_error">Error uploading the data. Please try again.</string>
    <string name="sync_status_on">Sync Now</string>
    <string name="sync_status_off">Sync Unavailable</string>
    <string name="enter_search">Enter Search</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="language">LANGUAGE</string>
    <string name="nfc_location_scan_error">Error. You can only scan a tag from the home screen.</string>
    <string name="event_details_not_filled_error">Event Type, Date and Time must be filled</string>
    <string name="error_key_download">Error downloading keys.</string>
	<string name="country_bangla">Bangladesh</string>
	<string name="country_pakistan">Pakistan</string>
	<string name="country_philippines">Philippines</string>
	<string name="role_cm">Country Manager</string>
	<string name="role_im">International Manager</string>
	<string name="lang_bangla">Bengali বাংলা</string>
	<string name="lang_eng">English</string>
	<string name="lang_urdu">Urdu اردو</string>
    <string name="purchase_weight">Purchase Weight</string>
    <string name="purchase_height">Purchase Height</string>
    <string name="sale_weight">Sale Weight</string>
    <string name="sale_height">Sale Height</string>
</resources>

