<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.animaldispersal.SearchActivity">
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/relativeLayout1"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/searchLabel1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/animal_id"
            />
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/caretaker"
            android:id="@+id/searchLabel2"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/searchLabel1"
            android:layout_toEndOf="@+id/searchLabel1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dispersal_ic"
            android:id="@+id/searchLabel3"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="10dp"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_dispersed"
            android:id="@+id/searchLabel4"
            android:layout_below="@+id/searchLabel3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="10dp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/searchLabel5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal_type"
            android:layout_below="@+id/searchLabel4"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="10dp"
            android:textColor="@color/white" />
    </RelativeLayout>
    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:scrollbars="none" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_records_found"
        android:id="@+id/no_animals_text"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        />
</RelativeLayout>